fix overlap of logo and zoom switch

--- a/app/assets/stylesheets/components/_topbar.scss
+++ b/app/assets/stylesheets/components/_topbar.scss
@@ -37,7 +37,7 @@
     color: $hpi-blue;
     text-shadow: 0px 0px 5px rgba(255, 255, 255, 0.2);
 
-    @media only screen and (max-width: 350px) {
+    @media only screen and (max-width: 400px) {
       & > span {
         display: none;
       }
